unfinished version with failing test